tests/should_fail/enum_incomplete_match.nv
module main

// SHOULD FAIL: match on enum without handling all variants
enum Color { Red, Green, Blue }

let c = Color::Red

match c {
    Color::Red => println("red")
}
// Missing Green and Blue
